--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,14 @@
 ---
 # defaults file for openhab
+
+openhab_install_addons: false
+openhab_packages:
+- openhab2
+
+# openhab default config section
+openhab_http_port: 8080
+openhab_https_port: 8443
+openhab_http_address: 0.0.0.0
+openhab_backups: /var/lib/openhab2/backups
+openhab_extra_java_opts: ""
+openhab_conf: /etc/openhab
