--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -5,13 +5,19 @@ driver:
   name: docker
 lint:
   name: yamllint
+
 platforms:
-  - name: instance
-    image: centos:7
+- name: instance
+  image: "${MOLECULE_DISTRO:-centos:7}"
+  published_ports:
+    - 0.0.0.0:8443:8443
+    - 0.0.0.0:8080:8080
+
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
+
 verifier:
   name: testinfra
   lint:
