--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,50 @@
 ---
-# tasks file for openhab
+# user setup
+- name: Create group for openhab
+  group:
+    name: openhab
+    state: present
+- name: Create user for openhab
+  user:
+    name: openhab
+    comment: Openhab System User
+    append: yes
+    groups: openhab
+    state: present
+    system: true
+
+- include: "repo-{{ ansible_os_family }}.yml"
+
+- name: Install Zulu Java 8
+  package:
+    name: zulu-8
+    state: present
+    update_cache: true
+
+- name: Setup openhab packages
+  set_fact:
+    openhab_packages: "{{ openhab_packages + [ 'openhab2-addons' ] }}"
+  when: openhab_install_addons
+
+- debug: var=openhab_packages
+
+- name: Install Openhab
+  package:
+    name: "{{ item }}"
+    state: present
+    update_cache: true
+  with_items: "{{ openhab_packages }}"
+
+- name: Configure openhab default config
+  template:
+    src: files/openhab-default.conf
+    dest: /etc/default/openhab2
+    owner: root
+    group: root
+    mode: '0644'
+    backup: yes
+
+- name: Start openhab service, if not started
+  service:
+    name: openhab2
+    state: started
