--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache:
 
 env:
   global:
-  - ROLE_NAME: certbot
+  - ROLE_NAME: openhab
   matrix:
   - MOLECULE_DISTRO: centos:7
   - MOLECULE_DISTRO: ubuntu:bionic
