--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,11 +7,14 @@ galaxy_info:
   min_ansible_version: 1.2
   platforms:
   - name: Ubuntu
-    versions: bionic
+    versions:
+    - 18.04
   - name: CentOS
-    versions: 7
+    versions:
+    - 7
   - name: Debian
-    versions: 10
+    versions:
+    - 9
 
   galaxy_tags:
   - iot
