--- a/tasks/repo-Debian.yml
+++ b/tasks/repo-Debian.yml
@@ -1,29 +1,29 @@
-- name: Add required package
-  package:
-    name: "{{ item }}"
-    state: present
-  with_items:
-  - software-properties-common
-  - python-apt
-
-- name: Add Zulu APT Key
+- name: apt_key ~> add zulu key
   apt_key:
     keyserver: hkp://keyserver.ubuntu.com:80
     id: '0xB1998361219BD9C9'
     state: present
 
-- name: Add Zulu Java Repository
+- name: apt_repository ~> add ubuntu
   apt_repository:
     filename: 'zulu'
     repo: deb http://repos.azulsystems.com/ubuntu stable main
     state: present
+  when: ansible_distribution == 'Ubuntu'
 
-- name: Add OpenHab apt key
+- name: apt_repository ~> add debian
+  apt_repository:
+    filename: 'zulu'
+    repo: deb http://repos.azulsystems.com/debian stable main
+    state: present
+  when: ansible_distribution == 'Debian'
+
+- name: apt_key ~> add openhab
   apt_key:
     url: https://bintray.com/user/downloadSubjectPublicKey?username=openhab
     state: present
 
-- name: Add OpenHab Repository
+- name: apt_repository ~> add openhab
   apt_repository:
     filename: 'openhab'
     repo: deb https://dl.bintray.com/openhab/apt-repo2 stable main
