--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,16 @@ env:
   global:
   - ROLE_NAME: openhab
   matrix:
-  - MOLECULE_DISTRO: centos:7
-  - MOLECULE_DISTRO: ubuntu:bionic
-  - MOLECULE_DISTRO: ubuntu:xenial
-  - MOLECULE_DISTRO: Debian:10
+  - MOLECULE_DISTRO: centos7
+  - MOLECULE_DISTRO: centos8
+  - MOLECULE_DISTRO: ubuntu1804
+  - MOLECULE_DISTRO: ubuntu1604
+  - MOLECULE_DISTRO: debian10
+  - MOLECULE_DISTRO: debian9
 
 install:
   # Install test dependencies.
-  - pip install molecule docker
+  - pip install molecule docker testinfra
 
 before_script:
 - cd ../
