--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -1,6 +1,13 @@
 ---
 - name: Converge
   hosts: all
+  pre_tasks:
+    - name: pakcage ~> add software properties
+      package: "{{ item }}"
+      state: present
+      loop:
+      - software-properties-common
+      - apt-transport-https
   roles:
     - role: openhab
   vars:
