--- a/tasks/repo-RedHat.yml
+++ b/tasks/repo-RedHat.yml
@@ -1,4 +1,4 @@
-- name: Add zulu java for RedHat Repository
+- name: repository ~> add zulu repo
   yum_repository:
     name: zulu
     description: Zulu Java Repository
@@ -6,14 +6,14 @@
     gpgkey: http://repos.azulsystems.com/RPM-GPG-KEY-azulsystems
     state: present
 
-- name: Openhab Repository
+- name: repository ~> add openhab2
   yum_repository:
     name: openhab2
     description: Openhab 2 Stable
     baseurl: https://dl.bintray.com/openhab/rpm-repo2/stable
     gpgkey: https://bintray.com/user/downloadSubjectPublicKey?username=openhab
 
-- name: Install initscripts
+- name: package ~> install init scripts
   package:
     name: initscripts
     state: present
