--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,14 +2,18 @@
 - name: Converge
   hosts: all
   pre_tasks:
+    - name: Update apt cache.
+      apt: update_cache=yes cache_valid_time=600
+      when: ansible_os_family == 'Debian'
+      changed_when: false
     - name: package ~> add apt utils
       package:
         name: "{{ item }}"
         state: present
-        loop:
+        item:
         - software-properties-common
         - apt-transport-https
-        when: ansible_os_family == 'Debian'
+      when: ansible_os_family == 'Debian'
   roles:
     - role: openhab
   vars:
