--- a/tasks/repo-Debian.yml
+++ b/tasks/repo-Debian.yml
@@ -1,7 +1,7 @@
 - name: apt_key ~> add zulu key
   apt_key:
-    keyserver: hkp://keyserver.ubuntu.com:80
-    id: '0xB1998361219BD9C9'
+    keyserver: keyserver.ubuntu.com
+    id: "0xB1998361219BD9C9"
     state: present
 
 - name: apt_repository ~> add ubuntu
