--- a/tasks/repo-Debian.yml
+++ b/tasks/repo-Debian.yml
@@ -1,8 +1,10 @@
-- name: apt_key ~> add zulu key
-  apt_key:
-    keyserver: keyserver.ubuntu.com
-    id: "0xB1998361219BD9C9"
-    state: present
+- name: command ~> list existing apt-key
+  command: apt-key list
+  register: zulu_apt_key_stat
+
+- name: command ~> add apt key for zulu
+  command: apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 0xB1998361219BD9C9
+  when: zulu_apt_key_stat.stdout.find('azulsystems') == -1
 
 - name: apt_repository ~> add ubuntu
   apt_repository:
