--- a/tasks/repo-Debian.yml
+++ b/tasks/repo-Debian.yml
@@ -1,6 +1,7 @@
 - name: command ~> list existing apt-key
   command: apt-key list
   register: zulu_apt_key_stat
+  changed_when: zulu_apt_key_stat.rc==0 or zulu_apt_key_stat.rc>99
 
 - name: command ~> add apt key for zulu
   command: apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 0xB1998361219BD9C9
