--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -13,6 +13,7 @@
         - software-properties-common
         - apt-transport-https
         - python3-apt
+        - dirmngr
       when: ansible_os_family == 'Debian'
   roles:
     - role: openhab
