--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -14,6 +14,7 @@
         - apt-transport-https
         - python3-apt
         - dirmngr
+        - openjdk-8-jdk
       when: ansible_os_family == 'Debian'
   roles:
     - role: openhab
