--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -15,6 +15,7 @@
         - apt-transport-https
         - python3-apt
         - dirmngr
+        - default-jre
       when: ansible_os_family == 'Debian'
   roles:
     - role: openhab
