--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -11,7 +11,7 @@ lint: |
 
 platforms:
 - name: instance
-  image: "geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible"
+  image: "kilip/molecule-${MOLECULE_DISTRO:-centos:7}"
   published_ports:
     - 0.0.0.0:8443:8443
     - 0.0.0.0:8080:8080
