ensure epel-release installed

--- a/tasks/repo-RedHat.yml
+++ b/tasks/repo-RedHat.yml
@@ -1,3 +1,8 @@
+- name: package ~> ensure epel installed
+  package:
+    name: epel-release
+    state: present
+
 - name: repository ~> add zulu repo
   yum_repository:
     name: zulu
