--- a/files/openhab-default.conf
+++ b/files/openhab-default.conf
@@ -6,3 +6,4 @@ OPENHAB_HTTPS_PORT={{ openhab_https_port }}
 OPENHAB_BACKUPS={{ openhab_backups }}
 EXTRA_JAVA_OPTS={{ openhab_extra_java_opts }}
 OPENHAB_CONF={{ openhab_conf }}
+OPENHAB_USER_DATA={{ openhab_user_data }}
