fixed userdata error when starting openhab

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,7 +14,7 @@ openhab_extra_java_opts: ""
 openhab_conf: /etc/openhab
 openhab_userdata: /var/lib/openhab2
 
-openhab_config_repo: ""
+openhab_config_repo: null
 openhab_config_version: "master"
 openhab_config_owner: openhab
 openhab_config_group: openhab
