--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,6 +15,8 @@ openhab_conf: /etc/openhab
 openhab_userdata: /var/lib/openhab2
 
 openhab_config_repo: null
+openhab_config_ssh_keyfile: null
+
 openhab_config_version: "master"
 openhab_config_owner: openhab
 openhab_config_group: openhab
