--- a/tasks/setup-config.yml
+++ b/tasks/setup-config.yml
@@ -42,9 +42,11 @@
 - name: git ~> checkout config "{{ openhab_config_repo }}"
   become: "{{ openhab_config_owner }}"
   git:
+    accept_hostkey: yes
     repo: "{{ openhab_config_repo }}"
     dest: "{{ openhab_conf }}"
     version: "{{ openhab_config_version }}"
+    key_file: "{{ openhab_config_ssh_keyfile }}"
   when: openhab_config_repo != None
 
 - name: file ~> ensure userdata dir exists
