--- a/tasks/repo-RedHat.yml
+++ b/tasks/repo-RedHat.yml
@@ -17,3 +17,8 @@
     description: Openhab 2 Stable
     baseurl: http://dl.bintray.com/openhab/rpm-repo2/stable
     gpgkey: http://bintray.com/user/downloadSubjectPublicKey?username=openhab
+
+- name: fact ~> set fact for RedHat
+  set_fact:
+    _openhab_apache2utils_package: httpd-tools
+
