--- a/molecule/default/include/openssl.yml
+++ b/molecule/default/include/openssl.yml
@@ -2,7 +2,13 @@
   package:
     name: python3-cryptography
     state: present
+  when: not ansible_distribution_major_version|int == 16
 
+- name: package ~> ensure package installed for ubuntu 16.04
+  package:
+    name: python-cryptography
+    state: present
+  when: ansible_distribution_major_version|int == 16
 - name: file ~> create openssl dir
   file:
     path: /etc/nginx/cert
