--- a/tasks/configure-nginx.yml
+++ b/tasks/configure-nginx.yml
@@ -1,13 +1,13 @@
-- name: package ~> ensure required packages installed
+- name: include nginx config vars
+  include_vars: openhab-nginx.yml
+
+- name: include geerlingguy.nginx role
+  include_role:
+    name: geerlingguy.nginx
+
+- name: package ~> ensure apache2 utils installed
   package:
     name: "{{ item }}"
     state: present
   loop:
-    - nginx
     - "{{ _openhab_apache2utils_package }}"
-
-
-- name: template ~> render nginx config
-  template:
-    src: nginx.conf.j2
-    dest: /etc/nginx/sites-enabled/openhab.conf
