--- a/molecule/default/include/openssl.yml
+++ b/molecule/default/include/openssl.yml
@@ -4,7 +4,7 @@
     state: present
   when: not ansible_distribution_major_version|int == 16
 
-- name: package ~> ensure package installed for ubuntu 16.04
+- name: package ~> ensure python-cryptography installed for ubuntu 16.04
   package:
     name: python-cryptography
     state: present
