--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -5,6 +5,10 @@ dependency:
 driver:
   name: docker
 
+lint: |
+  yamllint .
+  ansible-lint
+
 platforms:
 - name: instance
   image: "kilip/molecule-${MOLECULE_DISTRO:-centos:8}"
