--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,7 +10,7 @@ openhab_https_port: 8443
 openhab_http_address: 0.0.0.0
 openhab_backups: /var/lib/openhab2/backups
 openhab_extra_java_opts: ""
-openhab_conf: /etc/openhab
+openhab_conf: /etc/openhab2
 openhab_userdata: /var/lib/openhab2
 
 openhab_config_repo: null
@@ -19,3 +19,9 @@ openhab_config_ssh_keyfile: null
 openhab_config_version: "master"
 openhab_config_owner: openhab
 openhab_config_group: openhab
+
+openhab_nginx_users: []
+openhab_nginx_htpasswd_file: "{{ openhab_conf }}/.htpasswd"
+
+_openhab_nginx_htpasswd_checksum: "{{ openhab_nginx_htpasswd_file }}.checksum"
+_openhab_apache2utils_package: apache2-utils
